Add prisma as package & init prisma

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,7 @@
     {
       "mode": "auto"
     }
-  ]
+  ],
+  "prisma-smart-formatter.typescript.defaultFormatter": "numso.prettier-standard-vscode",
+  "prisma-smart-formatter.typescriptreact.defaultFormatter": "vscode.typescript-language-features"
 }
