--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -b",
-    "start": "node ./dist/index.js",
-    "dev": "pnpm run build && pnpm run start",
+    "start": " node dist/index.js",
+    "dev": "npm run build && npm run start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
