--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
     }
   ],
   "prisma-smart-formatter.typescript.defaultFormatter": "numso.prettier-standard-vscode",
-  "prisma-smart-formatter.typescriptreact.defaultFormatter": "vscode.typescript-language-features"
+  "prisma-smart-formatter.typescriptreact.defaultFormatter": "esbenp.prettier-vscode",
+  "[typescript]": {
+    "editor.defaultFormatter": "numso.prettier-standard-vscode"
+  }
 }
